# kafka-schema-registry-operator

./: crd.yaml  operator.py  pyproject.toml
